plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.archiveat'
version = '0.0.1-SNAPSHOT'
description = 'archiveat server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient for async HTTP calls

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // .env file support
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // jwtutil
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	compileOnly 'org.projectlombok:lombok'
	// developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// macOS(Apple Silicon) 환경에서 Netty DNS 리졸버 에러 해결을 위한 네이티브 라이브러리
	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.130.Final:osx-aarch_64'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	// Redisson for distributed lock
	implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'

	// Sentry for error monitoring
	implementation 'io.sentry:sentry-spring-boot-starter:6.34.0'
	implementation 'io.sentry:sentry-logback:6.34.0'

	// H2 Database for test code
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()

	jvmArgs("-XX:+EnableDynamicAgentLoading")
}
